# LibreCAD

./: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/jwwlib/: CMakeLists.txt
libraries/jwwlib/src/: dl_jww-copy.cpp  dl_jww.h  jwtype.h
libraries/libdxfrw/: CMakeLists.txt
libraries/muparser/: CMakeLists.txt
tools/: CMakeLists.txt
tools/ttf2lff/: main.cpp
